# AITerminal

./: .gitignore  README.md  ai-terminal.spec  build.py  pyproject.toml
.github/workflows/: build.yml
ai_terminal/: __init__.py  __main__.py  agent.py  app.py  config.py
ai_terminal/cluster/: __init__.py  remote.py
ai_terminal/knowledge/: __init__.py  knowledge_tools.py
ai_terminal/runtime/: __init__.py  incident.py  safety_hook.py
ai_terminal/safety/: __init__.py  audit.py  policy.py
ai_terminal/services/: __init__.py  terminal_service.py
ai_terminal/skill/: __init__.py  skill_runner.py
ai_terminal/tools/: __init__.py  shell_tools.py
ai_terminal/tui/: __init__.py  app.py  commands.py  formatters.py  palette.py  tasks.py  theme.tcss
ai_terminal/tui/controllers/: __init__.py  chat.py  command.py
ai_terminal/tui/widgets/: __init__.py  command_input.py  risk_modal.py
ai_terminal/ui/: __init__.py  components.py  prompt.py
docs/: architecture.md  developer-guide.md  safety.md  tools.md  ui_design.md  user-guide.md
tests/: test_agent_registration.py  test_command_input.py  test_incident.py  test_safety.py  test_skill_runner.py  test_terminal_service_config_view.py  test_tui_ai_confirmation.py  test_tui_chat_controller.py  test_tui_command_controller.py  test_tui_formatters.py
